--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,8 @@
     "public": "build/es5-bundled/",
     "ignore": [
       "firebase.json",
-      "**/.*"
+      "**/.*",
+      "**/node_modules/**"
     ],
     "rewrites": [
       {
